Fix mus_demo

mus_demo was using the CreateWindowTreeHost to obtain a root window.
This interface is intentionally not available on CrOS devices where the
idea of a WindowTreeHost as the container for a PlatformWindow does not
apply. Switch mus_demo to being a WindowManager implementation so that
it works on all mus targets.

BUG=611504

Review-Url: https://codereview.chromium.org/2005143002
Cr-Commit-Position: refs/heads/master@{#395670}

Former-commit-id: 64bbb2cf3aa33913002f90ee453c47029b0185f9